# farfield-cli

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
src/farfield_cli/: __main__.py  cli.py
tests/: test_cli.py
