[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farfield-cli"
version = "0.1.0"
description = "Simple local CLI bridge for controlling Codex App through a Farfield sidecar."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "wuji419-bit" }
]
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
farfield-cli = "farfield_cli.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
